[gd_scene load_steps=3 format=2]

[ext_resource path="res://map/Inventory.gd" type="Script" id=1]
[ext_resource path="res://cards/Card.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 5.0
margin_right = 290.0
margin_bottom = 391.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Rect", "Scroll" ]

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 180
alignment = 0
_sections_unfolded = [ "Material", "Rect", "custom_constants" ]

[node name="Control5" type="Control" parent="ScrollContainer/VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Card" parent="ScrollContainer/VBoxContainer/Control5" index="0" instance=ExtResource( 2 )]

position = Vector2( 104, 119 )

[node name="Control4" type="Control" parent="ScrollContainer/VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Card" parent="ScrollContainer/VBoxContainer/Control4" index="0" instance=ExtResource( 2 )]

position = Vector2( 104, 123 )

[node name="Control3" type="Control" parent="ScrollContainer/VBoxContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 360.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Card" parent="ScrollContainer/VBoxContainer/Control3" index="0" instance=ExtResource( 2 )]

position = Vector2( 104, 134 )

[node name="Control" type="Control" parent="ScrollContainer/VBoxContainer" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 540.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="Card" parent="ScrollContainer/VBoxContainer/Control" index="0" instance=ExtResource( 2 )]

position = Vector2( 105, 140 )

[node name="Control2" type="Control" parent="ScrollContainer/VBoxContainer" index="4" groups=[
"fuck",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 720.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="ScrollContainer/VBoxContainer/Control2" index="0"]

editor/display_folded = true
z_index = -1
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="ScrollContainer/VBoxContainer/Control2/Node2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -720.0
margin_right = 212.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="gui_input" from="ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]

[connection signal="mouse_entered" from="ScrollContainer" to="." method="_on_ScrollContainer_mouse_entered"]

[connection signal="mouse_exited" from="ScrollContainer" to="." method="_on_ScrollContainer_mouse_exited"]


